<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.watheq.watheq.delegation.PickDateForArrivingFragment">

    <LinearLayout
        android:id="@+id/fields"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/info_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/arrived_time"
            android:textColor="@color/rose_madder"
            android:textSize="15sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_15sdp">

            <RadioButton
                android:id="@+id/one_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:text="@string/one_hour"
                android:textColor="@color/united_blue" />

            <RadioButton
                android:id="@+id/two_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:text="@string/two_hours"
                android:textColor="@color/united_blue" />

            <RadioButton
                android:id="@+id/three_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:text="@string/three_hours"
                android:textColor="@color/united_blue" />
        </RadioGroup>

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/another_time"
            android:paddingBottom="@dimen/_15sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:paddingStart="@dimen/_5sdp"
            android:paddingTop="@dimen/_15sdp"
            android:textColor="@color/united_blue"
            android:textSize="16sp" />

    </LinearLayout>

    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
        android:id="@+id/next_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/rounded_corner_blue"
        android:gravity="center"
        android:text="@string/next_step"
        android:textColor="@android:color/white"
        app:initialCornerAngle="@dimen/_10sdp"
        app:spinning_bar_color="@android:color/white" />

</LinearLayout>
