<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke"
    tools:context="com.watheq.watheq.myOrder.MyOrdersFragment">

    <!-- TODO: Update blank fragment layout -->
    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/pastel_blue" />

    <LinearLayout
        android:id="@+id/tabs_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/new_orders"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/red_rounded_corner"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="@dimen/_3sdp"
            android:text="@string/new_orders"
            android:textColor="@android:color/white" />


        <TextView
            android:id="@+id/opened_orders"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="@dimen/_3sdp"
            android:text="@string/opened_orders"
            android:textColor="@android:color/white" />


        <TextView
            android:id="@+id/closed_orders"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="@dimen/_3sdp"
            android:text="@string/closed_orders"
            android:textColor="@android:color/white" />
    </LinearLayout>


    <com.watheq.watheq.views.NonSwipeableViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tabs_holder" />
</RelativeLayout>
