<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.watheq.watheq.setting.ReportProblemActivity">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/toolbar" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/edit_text_rounded"
        android:hint="@string/msg_title"
        android:paddingBottom="@dimen/_10sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:paddingStart="@dimen/_5sdp"
        android:paddingTop="@dimen/_10sdp"
        android:textColor="@color/united_blue"
        android:textSize="@dimen/_11sdp" />


    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/edit_text_rounded"
        android:gravity="center|start|top"
        android:hint="@string/message"
        android:lines="6"
        android:paddingBottom="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:paddingStart="@dimen/_5sdp"
        android:paddingTop="@dimen/_5sdp"
        android:textColor="@color/united_blue"
        android:textSize="@dimen/_11sdp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
            android:id="@+id/next_step"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/rounded_corner_blue"
            android:gravity="center"
            android:text="@string/send_request"
            android:textColor="@android:color/white"
            app:initialCornerAngle="@dimen/_10sdp"
            app:spinning_bar_color="@android:color/white" />

    </RelativeLayout>
</LinearLayout>
