<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/fields"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/info_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:text="@string/arrived_time"
                android:textColor="@color/rose_madder"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/arrived_date"
                android:paddingBottom="@dimen/_15sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:paddingStart="@dimen/_5sdp"
                android:paddingTop="@dimen/_15sdp"
                android:textColor="@color/united_blue"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/arrived_time"
                android:paddingBottom="@dimen/_15sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:paddingStart="@dimen/_5sdp"
                android:paddingTop="@dimen/_15sdp"
                android:textColor="@color/united_blue"
                android:textSize="16sp" />

        </LinearLayout>

        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
            android:id="@+id/next_step"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/rounded_corner_blue"
            android:gravity="center"
            android:text="@string/next_step"
            android:textColor="@android:color/white"
            app:initialCornerAngle="@dimen/_10sdp"
            app:spinning_bar_color="@android:color/white" />

    </LinearLayout>

</ScrollView>